# mcjsonlogger

./: .gitignore  LICENSE  README.md  RELEASE.md  pyproject.toml  requirements.txt
src/mcjsonlogger/: LICENSE  README.md  __init__.py  logger_setup.py  pyproject.toml
tests/: test_logger_setup.py
