[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcjsonlogger"
version = "0.1.0"
authors = [
  { name="Mattias Gustavsson", email="mg@slitt.se" },
]
description = "Simple JSON logger for Python. This is a wrapper around the standard Python logging module that outputs JSON-formatted log messages."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mcyrrer/mcjsonlogger"
Issues = "https://github.com/mcyrrer/mcjsonlogger/issuess"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/mcjsonlogger/__init__.py" = ["{version}"]

"README.md" = [
    "{version}",
    "{pep440_version}",
]

