[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "mcjsonlogger"
version = "0.0.1"
authors = [
  { name="Mattias Gustavsson", email="mg@slitt.se" },
]
description = "Simple JSON logger for Python.  This is a wrapper around the standard Python
logging module that outputs JSON-formatted log messages."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"